SLACK 메시지 전송시 배포 내용 추가 #1

--- a/application.properties
+++ b/application.properties
@@ -25,3 +25,6 @@
 # e.g) slack,file,tcp,db,...
 # if not specify, saturn will use slack default
 #message.notify.chain=slack
+
+# fmon : fatima monitoring web service
+#fmon.url=http://fmon.music-flo.io:8082/process/history?host=%s&proc=%s
